--- a/PAS/Assembly-CSharp-vs.csproj
+++ b/PAS/Assembly-CSharp-vs.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\DisableButton.cs" />
+     <Compile Include="Assets\Scripts\Instantiate.cs" />
      <Compile Include="Assets\Scripts\MainScript.cs" />
      <Compile Include="Assets\Scripts\ObjectTally.cs" />
      <Compile Include="Assets\Scripts\PASColor.cs" />
