Renamed MultiMain to Mainscript for now
Also added few changes to tablet for multiplayer

--- a/PAS/Assembly-CSharp-vs.csproj
+++ b/PAS/Assembly-CSharp-vs.csproj
@@ -51,7 +51,7 @@
      <Compile Include="Assets\Scripts\DisableButton.cs" />
      <Compile Include="Assets\Scripts\Instantiate.cs" />
      <Compile Include="Assets\Scripts\LoadMainMenu.cs" />
-     <Compile Include="Assets\Scripts\MulitMain.cs" />
+     <Compile Include="Assets\Scripts\MainScript.cs" />
      <Compile Include="Assets\Scripts\ObjectTally.cs" />
      <Compile Include="Assets\Scripts\PASColor.cs" />
      <Compile Include="Assets\Scripts\Play.cs" />
