ADDED MULTIPLAYER LAYOUT
added multiplayer layout

--- a/PAS/Assembly-CSharp-vs.csproj
+++ b/PAS/Assembly-CSharp-vs.csproj
@@ -50,8 +50,10 @@
      <Compile Include="Assets\Scripts\DeleteShape.cs" />
      <Compile Include="Assets\Scripts\DisableButton.cs" />
      <Compile Include="Assets\Scripts\Instantiate.cs" />
+     <Compile Include="Assets\Scripts\LightFlash.cs" />
      <Compile Include="Assets\Scripts\LoadMainMenu.cs" />
      <Compile Include="Assets\Scripts\MainScript.cs" />
+     <Compile Include="Assets\Scripts\MultiTimer.cs" />
      <Compile Include="Assets\Scripts\ObjectTally.cs" />
      <Compile Include="Assets\Scripts\PASColor.cs" />
      <Compile Include="Assets\Scripts\Play.cs" />
